--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,4 +25,12 @@ jobs:
       - name: Construir y subir imagen Docker
         run: |
           docker build -t gcr.io/${{ secrets.GCP_PROJECT_ID }}/ci-cd-ia:latest .
-          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }
+          docker push gcr.io/${{ secrets.GCP_PROJECT_ID }}/ci-cd-ia:latest
+
+      - name: Desplegar en Cloud Run
+        run: |
+          gcloud run deploy ci-cd-ia \
+            --image gcr.io/${{ secrets.GCP_PROJECT_ID }}/ci-cd-ia:latest \
+            --platform managed \
+            --region us-central1 \
+            --allow-unauthenticated
